--- a/client/src/app/shared/components/profile-card/profile-card.component.html
+++ b/client/src/app/shared/components/profile-card/profile-card.component.html
@@ -24,7 +24,7 @@
         <i class="fa fa-user-times" aria-hidden="true"></i>Eliminar
       </button>
       -->
-      <button class="btn-material btn-primary">
+      <button class="btn-material btn-primary" (click)="toggleButton($event)">
         <i class="fa fa-user-plus" aria-hidden="true"></i>
         <span class="text">Seguir</span>
       </button>
