--- a/client/src/app/create-rv/components/creation-form/creation-form.component.html
+++ b/client/src/app/create-rv/components/creation-form/creation-form.component.html
@@ -11,11 +11,11 @@
     <form role="form" class="form create-form" [formGroup]="form" (ngSubmit)="onSubmit()">
       <div class="form-group">
         <label for="nombre">Nombre</label>
-        <input id="nombre" type="text" name="nombre" class="form-control" autofocus required>
+        <input id="nombre" type="text" name="nombre" autofocus required>
       </div>
       <div class="form-group">
         <label for="form-about-yourself">Descripción</label>
-        <textarea id="descripcion" name="descripcion" rows="3" class="form-control"></textarea>
+        <textarea id="descripcion" name="descripcion" rows="3"></textarea>
       </div>
       <div class="form-group">
         <label for="visibilidad">Visibilidad</label>
