--- a/client/src/app/create-rv/components/creation-form/creation-form.component.html
+++ b/client/src/app/create-rv/components/creation-form/creation-form.component.html
@@ -8,23 +8,23 @@
     </div>
   </div>
   <div class="form-bottom">
-    <form role="form" class="form create-form" [formGroup]="form" (ngSubmit)="onSubmit()">
+    <form role="form" class="form create-form" [formGroup]="form" > <!--(ngSubmit)="onSubmit()" -->
       <div class="form-group">
         <label for="nombre">Nombre</label>
-        <input id="nombre" type="text" name="nombre" autofocus required>
+        <input id="nombre" type="text" name="nombre" formControlName="nombre" autofocus required>
       </div>
       <div class="form-group">
         <label for="form-about-yourself">Descripción</label>
-        <textarea id="descripcion" name="descripcion" rows="3"></textarea>
+        <textarea id="descripcion" name="descripcion" formControlName="descripcion" rows="3"></textarea>
       </div>
       <div class="form-group">
         <label for="visibilidad">Visibilidad</label>
         <div class="radio">
-          <input type="radio" name="visibilidad" value="PUBLICA" checked>
+          <input type="radio" name="visibilidad" formControlName="visibilidad" value="PUBLICA" checked>
           <label>Pública</label>
         </div>
         <div class="radio">
-          <input type="radio" name="visibilidad" value="PRIVADA">
+          <input type="radio" name="visibilidad" formControlName="visibilidad" value="PRIVADA">
           <label>Privada</label>
         </div>
       </div>
