Un pequeño paso para un hombre, pero un gran salto para la humanidad

--- a/client/src/app/shared/components/profile-card/profile-card.component.html
+++ b/client/src/app/shared/components/profile-card/profile-card.component.html
@@ -1,11 +1,11 @@
 <div class="pcard shadow">
   <div class="pcard-body pull-right">
     <section class="avatar">
-      <img class="img-responsive" src="{{user.imagenGoogleUrl}}" alt="Avatar">
+     <img class="img-responsive" src="{{user.imagenUrl}}" alt="Avatar">
     </section>
 
     <section class="info-user">
-      <h2>{{user.nombre}} {{ user.apellido}}</h2>
+      <h2>{{user.nombre}} {{user.apellido}}</h2>
       <em class="username">@{{user.username}}</em>
 
       <div class="description">
