Agregado efecto desplegable a textbox de búsqueda

--- a/client/src/app/create-rv/components/creation-panel/creation-panel.component.html
+++ b/client/src/app/create-rv/components/creation-panel/creation-panel.component.html
@@ -1,4 +1,9 @@
 <div class="shadow">
+  <apollo-search-location-textbox
+    class="search-location-textbox"
+    #location
+  ></apollo-search-location-textbox>
+
   <sebm-google-map
     [latitude]="lat"
     [longitude]="lng"
