--- a/client/src/app/create-rv/create-rv.component.html
+++ b/client/src/app/create-rv/create-rv.component.html
@@ -1,12 +1,17 @@
 <apollo-navbar></apollo-navbar>
 
 <div class="contenido">
-  <apollo-creation-form class="creation-form" (submit)="form.onSubmit(panel.getMarkers())" #form></apollo-creation-form>
-  <apollo-creation-panel class="creation-panel"
-                         [lat]="location.latitude || lat"
-                         [lng]="location.longitude || lng"
-                         [zoom]="location.zoom || zoom"
-                         #panel>
-  </apollo-creation-panel>
-  <apollo-search-location-textbox class="search-location-textbox" #location></apollo-search-location-textbox>
+  <apollo-creation-form
+    class="creation-form"
+    (submit)="form.onSubmit(panel.getMarkers())"
+    #form
+  ></apollo-creation-form>
+
+  <apollo-creation-panel
+    class="creation-panel"
+    [lat]="location.latitude || lat"
+    [lng]="location.longitude || lng"
+    [zoom]="location.zoom || zoom"
+    #panel
+  ></apollo-creation-panel>
 </div>
