--- a/client/src/app/shared/components/view-rv/view-rv.component.css
+++ b/client/src/app/shared/components/view-rv/view-rv.component.css
@@ -26,7 +26,7 @@
   background-color: #eaeaea;
 }
 
-.rv-map .rv-picture {
+.rv-map .rv-google-map {
   border-top: 1px solid #ccc;
   border-bottom: 1px solid #ccc;
   width: 100%;
