--- a/client/src/app/shared/components/view-rv/view-rv.component.html
+++ b/client/src/app/shared/components/view-rv/view-rv.component.html
@@ -2,7 +2,7 @@
   <div class="view-rv shadow">
     <div class="background">
       <section class="rv-map">
-        <img class="rv-picture" src="assets/img/sample-map.png">
+        <img class="rv-google-map" src="assets/img/sample-map.png">
       </section>
 
       <section class="rv-body">
