--- a/client/src/app/create-rv/components/creation-panel/creation-panel.component.css
+++ b/client/src/app/create-rv/components/creation-panel/creation-panel.component.css
@@ -1,6 +1,15 @@
 .shadow {
+  position: relative;
   height: 100%;
   width: 100%;
+}
+
+.search-location-textbox {
+  position: absolute;
+  top: 5px;
+  left: 5px;
+  z-index: 1000;
+  width: 50%;
 }
 
 .sebm-google-map-container {
