--- a/client/src/app/welcome/components/navbar-welcome/navbar-welcome.component.html
+++ b/client/src/app/welcome/components/navbar-welcome/navbar-welcome.component.html
@@ -8,8 +8,9 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-
-      <apollo-navbar-logo></apollo-navbar-logo>
+      <a class="page-scroll" href="#page-top">
+          <apollo-navbar-logo></apollo-navbar-logo>
+      </a>
     </div>
 
     <div class="collapse navbar-collapse navbar-right navbar-main-collapse" id="navbar-collapse">
@@ -20,6 +21,9 @@
         </li>
         <li>
           <a class="page-scroll" href="#about">Acerca de</a>
+        </li>
+        <li>
+          <a class="page-scroll" href="#nosotros">Nosotros</a>
         </li>
         <li>
           <a class="page-scroll" href="#contact">Contacto</a>
