--- a/client/src/app/welcome/welcome.component.html
+++ b/client/src/app/welcome/welcome.component.html
@@ -37,6 +37,24 @@
 
   <hr>
 
+  <!-- Nosotros Section -->
+  <section id="nosotros" class="container content-section text-center">
+    <div class="row">
+      <h2>Nosotros</h2>
+      <div class="equipo">
+        <a href="https://ar.linkedin.com/in/juan-bono-62803685"><img class="equipo-img"  src="assets/img/equipo/juan.jpg"></a>
+      </div>
+      <div class="equipo">
+        <a href="https://ar.linkedin.com/in/matías-mangiantini-668001126"><img class="equipo-img" src="assets/img/equipo/matias.jpg"></a>
+      </div>
+      <div class="equipo">
+        <a href="https://ar.linkedin.com/in/federico-sanches"><img class="equipo-img"  src="assets/img/equipo/federico.jpg"></a>
+      </div>
+    </div>
+  </section>
+
+  <hr>
+
   <!-- Contacto Section -->
   <section id="contact" class="container content-section text-center">
     <div class="row">
@@ -46,15 +64,15 @@
         <p>Estamos en las redes sociales.</p>
         <ul class="list-inline banner-social-buttons">
           <li>
-            <a href="#" class="btn btn-default btn-lg">
+            <a href="https://www.facebook.com/pg/apollocom-238918739899778" class="btn btn-default btn-lg">
               <i class="fa fa-facebook fa-fw"></i>
-              <span class="network-name">Facebook</span>
+              <span class="network-name">facebook</span>
             </a>
           </li>
           <li>
             <a href="#" class="btn btn-default btn-lg">
               <i class="fa fa-twitter fa-fw"></i>
-              <span class="network-name">Twitter</span>
+              <span class="network-name">twitter</span>
             </a>
           </li>
           <li>
