--- a/client/src/app/shared/components/view-rv/view-rv.component.css
+++ b/client/src/app/shared/components/view-rv/view-rv.component.css
@@ -49,6 +49,7 @@
 .rv-info {
   width: 100%;
   padding: 20px;
+  float: left;
 }
 
 .rv-data {
@@ -98,7 +99,7 @@
   display: inline-block;
   float: right;
   clear: both;
-  padding: 5px;
+  padding: 5px 5px 0;
 }
 
 .actions button {
