--- a/client/src/app/shared/components/preview-rv/preview-rv.component.css
+++ b/client/src/app/shared/components/preview-rv/preview-rv.component.css
@@ -83,15 +83,14 @@
 
 .actions {
   display: inline-block;
-  float: right;
-  padding: 0 15px 5px;
+  float: left;
+  padding: 0 10px 5px;
 }
 
 .actions button {
   height: 35px;
   margin: 0;
-  margin-left: 15px;
-  padding: 0;
+  padding: 5px;
   border: none;
   background-color: transparent;
 }
