Agregada pantalla de búsqueda

--- a/client/src/app/shared/components/preview-user/preview-user.component.html
+++ b/client/src/app/shared/components/preview-user/preview-user.component.html
@@ -4,10 +4,10 @@
       <img class="user-picture" src="http://localhost:8080/images/usuario/1.jpg">
     </div>
     <div class="user-info" href="#">
-      <div class="username-nombre">
+      <a href="#" class="username-nombre">
         <strong class="user-nombre">Jon Snow</strong>
         <span class="username">@test</span>
-      </div>
+      </a>
       <span class="rv-creadas">
         <i class="fa fa-plane" aria-hidden="true"></i>9 viajes creados
       </span>
