--- a/client/src/app/welcome/welcome.component.html
+++ b/client/src/app/welcome/welcome.component.html
@@ -7,7 +7,10 @@
       <div class="container">
         <div class="row">
           <div class="col-md-10 col-md-offset-1">
-            <h1 class="brand-heading">Apollo</h1>
+            <div>
+                <img src="\assets\img\globe(2).png">
+                <h1 class="brand-heading">Apollo</h1>
+            </div>
             <p class="pintro">Comparte tu viaje con el mundo o inspírate</p>
             <a href="http://localhost:8080/auth/google" class="btn btn-default btn-lg">
               <i class="fa fa-google fa-fw"></i><span class="network-name">Sign In</span>
