actualizada version de angular, solucionados 2 bugs, ahora se puede desloguear de apollo y agregadas algunas cosas para las publicaciones

--- a/client/src/app/shared/components/navbar/navbar.component.html
+++ b/client/src/app/shared/components/navbar/navbar.component.html
@@ -40,7 +40,7 @@
             <li class="divider"></li>
 
             <li>
-              <a href="#">
+              <a (click)="logout()">
                 <span class="glyphicon glyphicon-log-out"></span>Salir
               </a>
             </li>
