--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -10,7 +10,7 @@
   <section id="publicaciones">
     <apollo-message-create-rv class="publicacion"></apollo-message-create-rv>
 
-    <!-- Esto hay que eliminarlo cuando se le agregue funcionalidad, por ahora es de muestra. -->
+    <!-- Esto hay que eliminarlo cuando se le agregue funcionalidad, por ahora es de muestra.
     <apollo-preview-rv class="publicacion"></apollo-preview-rv>
     <apollo-preview-rv [publica]="false" class="publicacion"></apollo-preview-rv>
     <apollo-preview-rv [compartida]="true" class="publicacion"></apollo-preview-rv>
@@ -21,5 +21,6 @@
     <apollo-preview-rv class="publicacion"></apollo-preview-rv>
     <apollo-preview-rv [compartida]="true" class="publicacion"></apollo-preview-rv>
     <apollo-preview-rv [compartida]="true" class="publicacion"></apollo-preview-rv>
+    -->
   </section>
 </div>
