--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -10,6 +10,11 @@
   <section id="publicaciones">
     <apollo-message-create-rv class="publicacion"></apollo-message-create-rv>
 
+      <apollo-preview-rv *ngFor="let unPost of posts"
+                         [post]="unPost"
+                         class="publicacion">
+      </apollo-preview-rv>
+
     <!-- Esto hay que eliminarlo cuando se le agregue funcionalidad, por ahora es de muestra.
     <apollo-preview-rv class="publicacion"></apollo-preview-rv>
     <apollo-preview-rv [publica]="false" class="publicacion"></apollo-preview-rv>
