--- a/client/src/app/shared/components/preview-rv/preview-rv.component.html
+++ b/client/src/app/shared/components/preview-rv/preview-rv.component.html
@@ -6,39 +6,39 @@
     </div>
 
     <div class="rv-map" (click)="showViewRV($event)">
-      <img class="rv-picture" src="assets/img/sample-map.png">
+      <img class="rv-picture" src="{{ post.rutaViaje.imagenUrl }}">
       <div class="gradient"></div>
-      <h4 class="rv-name">Ruta de viaje</h4>
+      <h4 class="rv-name">{{post.rutaViaje.nombre}}</h4>
     </div>
 
     <div class="rv-body pull-left-100">
       <div class="rv-data">
-        <i [hidden]="publica" class="rv-visibilidad fa fa-lock" aria-hidden="true" title="Privada"></i>
-        <i [hidden]="!publica" class="rv-visibilidad fa fa-globe" aria-hidden="true" title="Pública"></i>
+        <i [hidden]="post.rutaViaje.publico" class="rv-visibilidad fa fa-lock" aria-hidden="true" title="Privada"></i>
+        <i [hidden]="!post.rutaViaje.publico" class="rv-visibilidad fa fa-globe" aria-hidden="true" title="Pública"></i>
         <span class="rv-date-created"> · 10 min</span>
       </div>
 
       <div class="rv-user pull-left-100">
         <div class="wrapper-user-picture">
-          <img class="user-picture" src="http://localhost:8080/images/usuario/1.jpg">
+          <img class="user-picture" src="{{ post.creador.imagenUrl }}">
         </div>
         <a class="user-info" href="#">
-          <strong class="user-nombre">Jon Snow</strong>
-          <span class="username">@test</span>
+          <strong class="user-nombre">{{ post.creador.nombre }} {{ post.creador.apellido }}</strong>
+          <span class="username">@{{ post.creador.username }}</span>
         </a>
       </div>
 
       <div class="actions">
         <!-- Si la ruta de viaje fue creada por el usuario logueado agregar clase "disabled" -->
-        <button [hidden]="!publica" class="compartir" (click)="toggleButton($event)">
-          <i class="fa fa-share" aria-hidden="true"></i><span class="cantidad">1</span>
+        <button [hidden]="!post.rutaViaje.publico" class="compartir" (click)="toggleButton($event)">
+          <i class="fa fa-share" aria-hidden="true"></i><span class="cantidad">{{post.rutaViaje.compartidos.length}}</span>
         </button>
         <!-- Si la ruta de viaje fue creada por el usuario logueado agregar clase "disabled" -->
         <button class="favoritos" (click)="toggleButton($event)">
-          <i class="fa fa-star" aria-hidden="true"></i><span class="cantidad">16</span>
+          <i class="fa fa-star" aria-hidden="true"></i><span class="cantidad">{{post.rutaViaje.favoritos.length}}</span>
         </button>
         <button class="comentar" (click)="showViewRV($event)">
-          <i class="fa fa-comment" aria-hidden="true"></i><span class="cantidad">5</span>
+          <i class="fa fa-comment" aria-hidden="true"></i><span class="cantidad">{{post.rutaViaje.comentarios.length}}</span>
         </button>
       </div>
     </div>
