--- a/client/src/app/shared/components/preview-rv/preview-rv.component.html
+++ b/client/src/app/shared/components/preview-rv/preview-rv.component.html
@@ -32,8 +32,7 @@
         <button [ngClass]="esRutaPropia(post.rutaViaje)" [hidden]="!post.rutaViaje.publico" class="compartir" (click)="shareButton($event, post.rutaViaje)">
           <i class="fa fa-share" aria-hidden="true"></i><span class="cantidad">{{post.rutaViaje.compartidos.length}}</span>
         </button>
-        <!-- Si la ruta de viaje fue creada por el usuario logueado agregar clase "disabled" -->
-        <button class="favoritos" (click)="toggleButton($event)">
+        <button [ngClass]="esRutaPropia(post.rutaViaje)" class="favoritos" (click)="favButton($event, post.rutaViaje)">
           <i class="fa fa-star" aria-hidden="true"></i><span class="cantidad">{{post.rutaViaje.favoritos.length}}</span>
         </button>
         <button class="comentar" (click)="showViewRV($event)">
