casi terminado lo de agregar comentario, falta mostrarlo

--- a/client/src/app/create-rv/components/creation-form/creation-form.component.html
+++ b/client/src/app/create-rv/components/creation-form/creation-form.component.html
@@ -8,7 +8,7 @@
     </div>
   </div>
   <div class="form-bottom">
-    <form role="form" class="form create-form" [formGroup]="form" > <!--(ngSubmit)="onSubmit()" -->
+    <form role="form" class="form create-form" [formGroup]="form" >
       <div class="form-group">
         <label for="nombre">Nombre</label>
         <input id="nombre" type="text" name="nombre" formControlName="nombre" autofocus required>
