agregado mostrar los comentarios

--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -12,7 +12,8 @@
 
       <apollo-preview-rv *ngFor="let unPost of posts"
                          [post]="unPost"
-                         class="publicacion">
+                         class="publicacion"
+                         >
       </apollo-preview-rv>
 
   </section>
