--- a/client/src/app/shared/components/preview-rv/preview-rv.component.html
+++ b/client/src/app/shared/components/preview-rv/preview-rv.component.html
@@ -43,4 +43,4 @@
   </div>
 </div>
 
-<apollo-view-rv [post]="post"></apollo-view-rv>
+<apollo-view-rv [post]="post" (shown)="openView(post)"></apollo-view-rv>
