--- a/client/src/app/shared/components/view-rv/components/comment/comment.component.html
+++ b/client/src/app/shared/components/view-rv/components/comment/comment.component.html
@@ -1,22 +1,16 @@
 <div class="comment-header flex">
   <div class="wrapper-user-picture">
-    <img class="user-picture" src="http://localhost:8080/images/usuario/1.jpg">
+    <img class="user-picture" src="{{comment.usuario.imagenUrl}}">
   </div>
   <div class="comment-info">
     <a class="user-info" href="#">
-      <strong class="user-nombre">Jon Snow</strong>
-      <span class="username">@test</span>
+      <strong class="user-nombre">{{comment.usuario.nombre}} {{comment.usuario.apellido}}</strong>
+      <span class="username">@{{comment.usuario.username}}</span>
     </a>
     <span class="comment-date-created">5 min</span>
   </div>
 </div>
 
 <div class="comment-content">
-  <p>Has buscado alguna vez un viaje en Internet?</p>
-  <p>Has visto la cantidad de rutas de viajes diferentes que hay para la mismo mapa?</p>
-  <p>Apollo te ayuda a comparar las rutas de mas de 700 mil viajes en mas de 175 mapas, en vez de perder tiempo y dinero</p>
-  <p>Apollo te lo hace fácil para que encuentres tu ruta de viaje ideal... .al mejor precio</p>
-  <p>Solo entra a apollo.com y escribe tu destino, selecciona en dos clics el lugar de llegada y salida y así de simple, Apollo busca al instante entre cientos de rutas de viajes y te muestra las rutas disponibles, selecciona el titulo, la descripcion, marcala como favorito o filtra por las comentarios de los usuarios</p>
-  <p>Apollo te muestras las diferentes rutas de viajes disponibles para un mismo destino, así puedes estar seguro de encontrar tu viaje ideal al mejor precio</p>
-  <p>Viajes? Apollo</p>
+  <p>{{comment.contenido}}</p>
 </div>
