--- a/client/src/app/shared/components/view-rv/view-rv.component.html
+++ b/client/src/app/shared/components/view-rv/view-rv.component.html
@@ -2,6 +2,7 @@
   <div class="view-rv shadow">
     <div class="background">
       <section class="rv-map">
+        <!--<sebm-google-map [latitude]="51.678418" [longitude]="7.809007"></sebm-google-map>-->
         <img class="rv-google-map" src="{{post.rutaViaje.imagenUrl}}">
       </section>
 
