--- a/client/src/app/home/components/message-create-rv/message-create-rv.component.css
+++ b/client/src/app/home/components/message-create-rv/message-create-rv.component.css
@@ -1,10 +1,10 @@
 .message {
   padding: 0;
   width: 100%;
-  height: 300px;
   border-radius: 4px;
   overflow: hidden;
   background-color: #f9f9f9;
+  height: 318px;
 }
 
 .message .background {
@@ -40,7 +40,7 @@
 
 .message.vertical {
   position: relative;
-  height: 100%;
+  /* height: 100%; */
 }
 
 .message.vertical .text-box {
