--- a/client/src/app/shared/components/view-rv/view-rv.component.css
+++ b/client/src/app/shared/components/view-rv/view-rv.component.css
@@ -27,10 +27,11 @@
   background-color: #eaeaea;
 }
 
-.rv-map .rv-google-map {
+.rv-map .googe-map {
   border-top: 1px solid #ccc;
   border-bottom: 1px solid #ccc;
   width: 100%;
+  height: 100%;
   align-self: center;
 }
 
